src/objects/Client_Ad_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Ad Metrics</relationshipLabel>
        <relationshipName>Client_Ad_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rank_by_Ad_Spend__c</fullName>
        <label>Rank by Ad Spend</label>
        <picklist>
            <picklistValues>
                <fullName>Top 20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%- 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40% - 60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60% - 80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80% - 100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rank_by_Ads_Placed__c</fullName>
        <label>Rank by Ads Placed</label>
        <picklist>
            <picklistValues>
                <fullName>Top 20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20% - 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40% - 60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60% - 80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80% - 100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier_by_Ad_Spend__c</fullName>
        <formula>IF( ISPICKVAL(Rank_by_Ad_Spend__c, &quot;Top 20%&quot;), &quot;Tier 1&quot;, 
IF( ISPICKVAL(Rank_by_Ad_Spend__c, &quot;20% - 40%&quot;), &quot;Tier 2&quot;, 
IF( ISPICKVAL(Rank_by_Ad_Spend__c, &quot;40% - 60%&quot;), &quot;Tier 3&quot;, 
IF( ISPICKVAL(Rank_by_Ad_Spend__c, &quot;60% - 80%&quot;), &quot;Tier 4&quot;, 
IF( ISPICKVAL(Rank_by_Ad_Spend__c, &quot;80% - 100%&quot;), &quot;Tier 5&quot;, 
&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier by Ad Spend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_by_Ads_Placed__c</fullName>
        <formula>IF( ISPICKVAL(Rank_by_Ads_Placed__c, &quot;Top 20%&quot;), &quot;Tier 1&quot;, 
IF( ISPICKVAL(Rank_by_Ads_Placed__c, &quot;20% - 40%&quot;), &quot;Tier 2&quot;, 
IF( ISPICKVAL(Rank_by_Ads_Placed__c, &quot;40% - 60%&quot;), &quot;Tier 3&quot;, 
IF( ISPICKVAL(Rank_by_Ads_Placed__c, &quot;60% - 80%&quot;), &quot;Tier 4&quot;, 
IF( ISPICKVAL(Rank_by_Ads_Placed__c, &quot;80% - 100%&quot;), &quot;Tier 5&quot;, 
&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier by Ads Placed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Ad_Spend__c</fullName>
        <label>Total Ad Spend</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Ads_Placed__c</fullName>
        <label>Total Ads Placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Client Ad Metrics</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Client Ad Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Ad Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>